# dynamic-queries-api

./: Cargo.toml
src/: lib.rs  main.rs
src/config/: app.rs
src/database/: mod.rs  mssql_database.rs  sqlite_database.rs
src/database/mssql/: database.rs
src/database/sqlite/: database.rs
src/dto/: metadata.rs  metadata_mapping.rs  query_params.rs
src/features/: mod.rs
src/features/action/: controllers.rs  models.rs  repositories.rs  services.rs
src/features/authentication_type/: controllers.rs  models.rs  repositories.rs  services.rs
src/features/context/: controllers.rs  models.rs  repositories.rs  services.rs
src/features/fork/: controllers.rs  models.rs  repositories.rs  services.rs
src/features/forum/: controllers.rs  models.rs  repositories.rs  services.rs
src/features/forum_user_role_permission/: controllers.rs  models.rs  repositories.rs  services.rs
src/features/particular/: controllers.rs  models.rs  repositories.rs  services.rs
src/features/particular_user_role_permission/: controllers.rs  models.rs  repositories.rs  services.rs
src/features/permission/: controllers.rs  models.rs  repositories.rs  services.rs
src/features/relation/: controllers.rs  models.rs  repositories.rs  services.rs
src/features/role/: controllers.rs  models.rs  repositories.rs  services.rs
src/features/topic/: controllers.rs  models.rs  repositories.rs  services.rs
src/features/user/: controllers.rs  models.rs  repositories.rs  services.rs
src/features/user_authentication_type/: controllers.rs  models.rs  repositories.rs  (+1 more)
src/services/: mod.rs
(+81 files in other folders)
